<resources>
    <string name="app_name">IntervalTrainer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="countdown_default">00:00:00</string>
    <string name="start_button_text">Start</string>
    <string name="pause_button_text">Pause</string>
    <string name="reset_button_text">Reset</string>
    <string name="hours_text">Hours</string>
    <string name="minutes_text">Minutes</string>
    <string name="seconds_text">Seconds</string>
    <string name="set_button_text">Set</string>
    <string name="repeat_intervals">Repeat Intervals: %1$d</string>
    <string name="interval_total_time">Total time: %1$s</string>
    <string name="work_text">Work</string>
    <string name="interval_complete_text">Done</string>
    <string name="interval_rest_state">Rest</string>
    <string name="interval_work_state">Work</string>
    <string name="interval_count_text" >Interval %1$d of %2$d</string>
    <string name="rest_interval">Rest Interval</string>
</resources>